--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,86 @@
 @tailwind utilities;
 
 @layer components {
+    .paper {
+        @apply rounded-lg bg-white shadow-md border border-gray-100;
+    }
+
+
+    .btn {
+        @apply inline-flex items-center border border-transparent px-4 py-2 text-sm font-medium rounded-md disabled:opacity-60;
+    }
+
+    .btn-xs {
+        @apply btn px-2.5 py-1.5 text-xs rounded;
+    }
+
+    .btn-sm {
+        @apply btn px-3 py-2 leading-4;
+    }
+
+    .btn-lg {
+        @apply btn px-4 py-2 text-base;
+    }
+
+    .btn-xl {
+        @apply btn px-6 py-3 text-base;
+    }
+
+    .btn-primary {
+        @apply shadow-sm  text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+    }
+
+    .btn-secondary {
+        @apply text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+    }
+
+    .btn-white {
+        @apply border-gray-300 text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+    }
+
+    .btn-transparent {
+        @apply border-0 text-gray-700 bg-transparent hover:text-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+    }
+
+    .btn-rounded {
+        @apply rounded-full px-4 py-2;
+    }
+    .btn-rounded.btn-xs {
+        @apply px-3 py-1.5 text-xs;
+    }
+
+    .btn-rounded.btn-sm {
+        @apply px-3.5 py-2 leading-4;
+    }
+
+    .btn-rounded.btn-lg {
+        @apply px-5 py-2 text-base;
+    }
+
+    .btn-rounded.btn-xl {
+        @apply px-6 py-3 text-base;
+    }
+
+    .btn-circular {
+        @apply rounded-full p-2;
+    }
+    .btn-circular.btn-xs {
+        @apply p-1;
+    }
+
+    .btn-circular.btn-sm {
+        @apply p-1.5;
+    }
+
+    .btn-circular.btn-xl {
+        @apply p-3;
+    }
+
+    .btn-select {
+        @apply appearance-none form-select;
+    }
+
+
     .badge {
         @apply inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium;
     }
