--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,11 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    html, body #__next {
+        @apply h-full
+    }
+}
+
 @layer components {
     .paper {
         @apply rounded-lg bg-white shadow-md border border-gray-100;
     }
-
 
     .btn {
         @apply inline-flex items-center border border-transparent px-4 py-2 text-sm font-medium rounded-md disabled:opacity-60;
