--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,10 @@
         @apply btn px-6 py-3 text-base;
     }
 
+    .btn-full {
+        @apply w-full justify-center
+    }
+
     .btn-primary {
         @apply shadow-sm  text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
     }
